lib/bait/tests/inout_error/prefix/minus_no_num.in.bt
_ := -'string'

_ := -42

x := true
_ := -x
